# solana-projects

Assignment-1/: Cargo.toml
Assignment-1/src/: main.rs
bank/: Anchor.toml
bank/programs/bank/: Cargo.toml
bank/tests/: bank.ts
challenge-me/: Anchor.toml
challenge-me/programs/challenge-me/: Cargo.toml
challenge-me/tests/: challenge-me.ts
cli-tool/: Cargo.toml
cli-tool/src/: main.rs
crud-app/: Anchor.toml
crud-app/programs/crud-app/: Cargo.toml
dicepool/tests/: dicepool.ts
escrow-example/: Anchor.toml
escrow-example/programs/escrow-example/: Cargo.toml
favorites/: Anchor.toml  package.json  rust-toolchain.toml
favorites/programs/favorites/: Cargo.toml
favorites/tests/: favorites.ts
game/: Anchor.toml
game/programs/game/: Cargo.toml
order-book/: Cargo.toml
order-book/src/: inputs.rs  main.rs  orderbook.rs  routes.rs
simple-server/: Cargo.toml  task.csv
simple-server/src/: main.rs  task.rs
spl-custom-token/: Anchor.toml
spl-custom-token/programs/spl-custom-token/: Cargo.toml
spl-custom-token/programs/spl-custom-token/src/: lib.rs
spl-custom-token/programs/spl-custom-token/src/instructions/: initialize.rs  mint.rs  mod.rs  transfer.rs
spl-custom-token/tests/: spl-custom-token.ts
staking/: Anchor.toml
staking/programs/staking/: Cargo.toml
staking/tests/: staking.ts
swap/: Anchor.toml
swap/programs/swap/: Cargo.toml
swap/tests/: swap.ts
token-example/tests/: spl-custom-token.ts
token-lottery/: Anchor.toml  notes.txt
vesting/: Anchor.toml  package-lock.json
voting/: Anchor.toml
voting/tests/: voting.ts
(+61 files in other folders)
